Fix accordion element overflow-x

--- a/elements/upfront-accordion/css/uaccordion.css
+++ b/elements/upfront-accordion/css/uaccordion.css
@@ -1,3 +1,6 @@
+#page .upfront-accordion-wrap {
+	overflow-x: hidden;
+}
 #page .upfront-accordion-container .accordion-panel {
 	position: relative;
 }
